# deep_gamma

./: .gitignore  README.md  grid.yaml  grid_run_gamma.sh  pyproject.toml  requirements.txt  run_wandb_agent.sh  sweep.yaml
deep_gamma/: __init__.py  utils.py
deep_gamma/cosmo/: README.md  calculate_boiling_points.py  calculate_gammas.py  cosmo_calculate.py  generate_dataset.py  generate_training_data.py  nrtl_fitting.py  post_process_gammas.py
deep_gamma/graphs/: __init__.py  data_preprocessing.py  train_grid.py
deep_gamma/ops/: __init__.py  chem.py  chemprop.py  eval.py  fingerprint.py  polynomial.py  resolve.py  split.py  unifac.py  utils.py
deep_gamma/resources/: __init__.py  csv_resources.py  matplotlib_io_manager.py  numpy_io_manager.py  parquet_io_manager.py  parquet_resources.py  pil_io_manager.py
nbs/: aspen_calculate_gammas.ipynb  aspen_cosmo_comparison.ipynb  nrtl_vs_polynomial.ipynb  preprocess_cosmo.ipynb  unifac_visualization.ipynb  visualize_apen.ipynb  visualize_encoder.ipynb  visualize_pxy.ipynb  visualize_splits.ipynb
