[tool.poetry]
name = "deep_gamma"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]

[tool.poetry.dependencies]
# COSMO-RS
cosmopy = {git = "https://github.com/sustainable-processes/COSMOpy.git", optional = true}
notify-run = {version = "^0.0.14", optional = true}

# Core dependencies
python = ">=3.7.1,<3.9"
rdkit-pypi = "^2021.3.5"
dagster = "0.12.14"
lmfit = "^1.0.2"
ray = {extras = ["default"], version = "^1.6.0"}
scikit-learn = "^1.0"
numpy = "^1.21.2"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
CIRpy = "^1.0.2"
pyarrow = "^5.0.0"
wandb = "^0.12.4"
tensorboardX = "^2.4"
tensorboard = "^2.7.0"
chemprop = {path = "chemprop", develop = true}
torch-lr-finder = "^0.2.1"
thermo = "^0.2.10"
seaborn = "^0.11.2"


[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipykernel = "^6.4.1"
dagit = "^0.12.14"

[tool.poetry.extras]
cosmo = ["cosmopy", "notify-run"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
